objects/Financial_Account__c.object
<CustomObject>
    <fields>
        <fullName>History_Counter_Thirty_Days_PastDue__c</fullName>
        <label>History Counter Thirty Days PastDue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HomePhone_BillTo__c</fullName>
        <description>Home Phone Number</description>
        <label>HomePhone BillTo</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INT_PAY__c</fullName>
        <description>SRC: Host - IR (Information Repository)
INT: Data Feed from IR
Trans: &lt;Y/N&gt;
BU: RL
FD: Interest that has accrued since the last assessed payment and would be added to loan balance for payoff purposes</description>
        <label>Interest Due</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Description__c</fullName>
        <description>To be provided by TFS</description>
        <label>Insurance Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Quote_Date_Payoff__c</fullName>
        <label>Last Quote Date Payoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_UI_Edit_Date__c</fullName>
        <description>Via workflow, capture the last time an edit was made to the FA record by an end user so integration can perform targeted outgoing updates</description>
        <label>Last UI Edit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Late_Charge_Assessed__c</fullName>
        <description>Assessed late charge</description>
        <label>Late Charge Assessed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Late_Charge_Paid__c</fullName>
        <description>Late Charges Paid</description>
        <label>Late Charge Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Late_Charge_Waived__c</fullName>
        <description>Late Charges Waived</description>
        <label>Late Charge Waived</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Base_Rent__c</fullName>
        <description>Base rent</description>
        <label>Lease Base Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Contract_Time_Amount__c</fullName>
        <description>Amount in time of contract</description>
        <label>Lease Contract Time Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Date__c</fullName>
        <description>Lease effective date</description>
        <label>Lease Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Income_Late_ChargeAmt_Lease_ToDate__c</fullName>
        <label>Lease Income Late ChargeAmt Lease ToDate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Late_Charge_Waived_Amount_To_Date__c</fullName>
        <description>&quot;Lease_ late charge waived Lease_ to date</description>
        <label>Lease Late Charge Waived Amount To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Payment_Total_Rent__c</fullName>
        <description>Lease_ payment total rent</description>
        <label>Lease Payment Total Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Payoff_Amount_Gross__c</fullName>
        <description>Payoff amount</description>
        <label>Lease Payoff Amount Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Payoff_Amount_Quote__c</fullName>
        <description>Payoff amount</description>
        <label>Lease Payoff Amount Quote</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Payoff_Amount__c</fullName>
        <description>Payoff amount</description>
        <label>Lease Payoff Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Residual_Amount__c</fullName>
        <description>Lease_ residual end-of-term amount</description>
        <label>Lease Residual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Residual_End_of_Term_Amount__c</fullName>
        <description>Lease_ residual end-of-term amount</description>
        <label>Lease Residual End of Term Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_State__c</fullName>
        <description>State of the customer address (tax related)</description>
        <label>Lease State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_TermType__c</fullName>
        <description>Lease termination Type</description>
        <label>Lease TermType</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Termination_Date__c</fullName>
        <description>Lease termination date</description>
        <label>Lease Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <description>Lease type</description>
        <label>Lease Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Amount_Original__c</fullName>
        <description>Original amount</description>
        <label>Original Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Current_Amount__c</fullName>
        <description>Current amount</description>
        <label>Loan Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Date_Interest_To_Contract__c</fullName>
        <description>Interest contract to date</description>
        <label>Loan Date Interest To Contract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Due_Date_Change__c</fullName>
        <description>Due date change</description>
        <label>Loan Due Date Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Interest_Paid__c</fullName>
        <description>Interest paid</description>
        <label>Loan Interest Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Interest_Rebate__c</fullName>
        <description>Interest rebate</description>
        <label>Loan Interest Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Maturity_Date__c</fullName>
        <description>Maturity date Loan maturity date</description>
        <label>Loan Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Original_Term__c</fullName>
        <description>Original term</description>
        <label>Original Term</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Over_Payment_Amount__c</fullName>
        <description>Over payment</description>
        <label>Loan Over Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Rate_Annualized_Percentage__c</fullName>
        <formula>Loan_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Rate APR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Rate__c</fullName>
        <label>Loan Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Total_Interest_Paid__c</fullName>
        <description>Total interest paid</description>
        <label>Loan Total Interest Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_TypeCode__c</fullName>
        <description>&quot;Loan type code (simple</description>
        <label>Loan TypeCode</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <description>Loan type</description>
        <label>Loan Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <description>Maturity date</description>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maturity_Dates_Difference_in_Months__c</fullName>
        <description>Calculates the difference in complete months between the maturity date and revised maturity date</description>
        <formula>IF(DAY(Revised_Maturity_Date__c)&gt;=DAY(Maturity_Date__c),0,-1)+(YEAR(Revised_Maturity_Date__c)-YEAR(Maturity_Date__c))*12+MONTH(Revised_Maturity_Date__c)-MONTH(Maturity_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maturity Dates Difference in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message_Code1__c</fullName>
        <description>Message code</description>
        <label>Message Code1</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Code2__c</fullName>
        <description>Message code</description>
        <label>Message Code2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Code3__c</fullName>
        <description>Message code</description>
        <label>Message Code3</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Cure_Note__c</fullName>
        <description>Populated by a process &amp; flow.

Contains the most recent cure note text.</description>
        <label>Most Recent Cure Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_FAC__c</fullName>
        <label>Number of FAC</label>
        <summaryForeignKey>Financial_Account_Customer__c.Financial_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Numeric_Days_Past_Due__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to convert the text field for days past due as provided by integration to a numeric value for use in workflows and available for other simple calculations and comparisons.</description>
        <formula>VALUE(History_Counter_Days_Past_Due__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numeric Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partial_Payment_Option__c</fullName>
        <formula>IF(Coll_Num_Months_Past_Due__c &gt; 1, Payment_Amount_Past_Due__c - (Payment_Amount_Scheduled__c * (Coll_Num_Months_Past_Due__c - 1)), 0)</formula>
        <label>Partial Payment Option</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Past_Due_Charges__c</fullName>
        <formula>Payment_Amount_Past_Due__c + Charges_Late__c + Charges_Miscellaneous__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Due + Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PayOff_Bank_Rebate_Amount__c</fullName>
        <description>Pay off bank rebate</description>
        <label>PayOff Bank Rebate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PayOff_Dealership_Rebate_Amount__c</fullName>
        <description>Pay off dealer rebate</description>
        <label>PayOff Dealership Rebate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_ACH__c</fullName>
        <description>ACH payment amount</description>
        <label>Payment Amount ACH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Balloon__c</fullName>
        <description>Payment Amount</description>
        <label>Payment Amount Balloon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Last1__c</fullName>
        <label>Payment Amount Last1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Last2__c</fullName>
        <label>Payment Amount Last2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Last3__c</fullName>
        <label>Payment Amount Last3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Next__c</fullName>
        <description>Next due payment amount</description>
        <label>Payment Amount Next</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Past_Due__c</fullName>
        <description>Past due amount</description>
        <label>Past Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Scheduled__c</fullName>
        <description>Payment Amount</description>
        <label>Scheduled Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date_First__c</fullName>
        <description>First payment date</description>
        <label>Payment Date First</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Last1__c</fullName>
        <label>Payment Date Last1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Last2__c</fullName>
        <label>Payment Date Last2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Last3__c</fullName>
        <label>Payment Date Last3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Last_Extension__c</fullName>
        <description>Last Extension Date</description>
        <label>Last Extension Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Next__c</fullName>
        <description>next due payment date</description>
        <label>Payment Date Next</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Past_Due__c</fullName>
        <description>Past due date</description>
        <label>Past Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Depreciation_Amount__c</fullName>
        <description>Lease payment depreciation amount</description>
        <label>Payment Depreciation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Extension_Fee_Assessed__c</fullName>
        <description>Payment Extension Fees</description>
        <label>Payment Extension Fee Assessed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Extension_Fee_Deferred__c</fullName>
        <description>Payment Extension Fees</description>
        <label>Payment Extension Fee Deferred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Extension_Fee_Paid__c</fullName>
        <description>Payment Extension Fees</description>
        <label>Payment Extension Fee Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Extension_Fee_Waived__c</fullName>
        <description>Payment Extension Fees</description>
        <label>Payment Extension Fee Waived</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Extension_Fee__c</fullName>
        <description>Payment Extension Fees</description>
        <label>Payment Extension Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Income_Amount__c</fullName>
        <description>Lease payment income amount</description>
        <label>Payment Income Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Insurance_Amount__c</fullName>
        <description>Lease payment insurance amount</description>
        <label>Payment Insurance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Last_Extension_Date__c</fullName>
        <description>Extension date</description>
        <label>Payment Last Extension Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Lease_Maintenance_Amount__c</fullName>
        <description>Lease payment maintenance amount</description>
        <label>Payment Lease Maintenance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Partial_Amount__c</fullName>
        <description>Payment amount</description>
        <label>Payment Partial Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Past_Due_Counter_15__c</fullName>
        <label>Payment Past Due Counter 15</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Past_Due_Counter_30__c</fullName>
        <label>Payment Past Due Counter 30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Past_Due_Counter_60__c</fullName>
        <label>Payment Past Due Counter 60</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Term_Remaining__c</fullName>
        <description>Remaining payment term</description>
        <label>Payment Term Remaining</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payoff_Amount_Gross__c</fullName>
        <description>payoff amount (Lease - gross)</description>
        <label>Payoff Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payoff_Amount_Net__c</fullName>
        <description>Payoff Amount (Retail - net)</description>
        <label>Payoff Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payoff_Amount__c</fullName>
        <description>payoff amount</description>
        <label>Payoff Amount (no data)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payoff_Good_Thru_Date__c</fullName>
        <description>Good through date</description>
        <label>Payoff Good Thru Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Garage_State__c</fullName>
        <description>Populated by workflow rule. 

Indicates the mailing garage state for the primary borrower.</description>
        <label>Primary Garage State</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrivacyElection_Affiliate_Sharing_Source__c</fullName>
        <description>Affiliate Sharing Source Flag</description>
        <label>PrivacyElection Affiliate Sharing Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Elec_Affiliate_Marketing_Source__c</fullName>
        <description>Affiliate Marketing  Source Flag</description>
        <label>Privacy Elec Affiliate Marketing Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Elect_Third_Party_Sharing_Source__c</fullName>
        <description>Third Party Sharing Source Flag</description>
        <label>Privacy Elect Third Party Sharing Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Affiliate_Marketing__c</fullName>
        <description>Affiliate Marketing Flag</description>
        <label>Affiliate Marketing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Affiliate_Sharing__c</fullName>
        <description>Affiliate Sharing Flag</description>
        <label>Affiliate Sharing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Dealership_Source__c</fullName>
        <description>Dealer Privacy Source Flag</description>
        <label>Privacy Election Dealership Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Dealership__c</fullName>
        <description>Dealer Privacy Flag</description>
        <label>Toyota/Lexus Dealer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_FCRA_Sharing_Source__c</fullName>
        <description>FCRA Sharing Source Flag</description>
        <label>Privacy Election FCRA Sharing Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_FCRA_Sharing__c</fullName>
        <description>FCRA Sharing Flag</description>
        <label>Credit App/Rpt</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Telemarketing_Source__c</fullName>
        <description>Telemarketing Source Flag</description>
        <label>Privacy Election Telemarketing Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Telemarketing__c</fullName>
        <description>Telemarketing Flag</description>
        <label>TFS Telemarketing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Third_Party_Sharing__c</fullName>
        <description>Third Party Sharing Flag</description>
        <label>3rd Party</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_State_Code__c</fullName>
        <description>Privacy State Code</description>
        <label>Privacy State Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Option_Amount__c</fullName>
        <description>Purchase option</description>
        <label>Purchase Option Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Record_Type_Match__c</fullName>
        <description>Compares the RecordType Name to the Finance Account Product Type. Returns TRUE when a match, otherwise FALSE.</description>
        <formula>IF( RecordType.Name = TEXT( Finance_Account_Product_Type__c), TRUE, FALSE)</formula>
        <inlineHelpText>Compares the RecordType Name to the Finance Account Product Type. Returns TRUE when a match, otherwise FALSE.</inlineHelpText>
        <label>Record Type Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recovery_Code_Formula__c</fullName>
        <formula>IF(Recovery_Code__c &lt;&gt; &quot;&quot;, Recovery_Code__c &amp; &quot; - &quot;, &quot;&quot;) &amp; Recovery_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recovery Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recovery_Code__c</fullName>
        <label>Recovery Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recovery_Description__c</fullName>
        <description>To be provided by TFS</description>
        <label>Recovery Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund__c</fullName>
        <description>SRC: Host - IR (Information Repository)
INT: Data Feed from IR
Trans: &lt;Y/N&gt;
BU: RL
FD: Unearned rent charges to be refunded to the customer on a lease payoff</description>
        <label>Refund</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region_Number__c</fullName>
        <description>Region number</description>
        <label>Region Number</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reinstatements__c</fullName>
        <formula>CASE(Risk_Strategy_Code_2__c,
&quot;AAA&quot;, &quot;RST:APPR&quot;,
&quot;CMN&quot;, &quot;CMNO - Conditionally Mandatory State - High Risk&quot;,
&quot;CMY&quot;, &quot;CMYS - Conditionally Mandatory State - Low Risk&quot;,
&quot;DSN&quot;, &quot;DSNO - Discretionary State High Risk - TL Approval Rqrd&quot;,
&quot;DSY&quot;, &quot;DSYS - Discretionary State Low Risk&quot;,
&quot;MDN&quot;, &quot;MDNO - Mandatory High Risk&quot;,
&quot;MDY&quot;, &quot;MDYS - Mandatory Low Risk&quot;,
Risk_Strategy_Code_2__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reinstatements</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repo_Full_Term_Date__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Used as an input to determine if maturity date is within 30 days, which is equivalent to a full term for a lease in a repo</description>
        <formula>TODAY() + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Repo Full Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Repossession__c</fullName>
        <formula>CASE(Risk_Strategy_Code_3__c,
&quot;CND&quot;, &quot;COND - Assign based on account status&quot;,
&quot;NOR&quot;, &quot;NOR - Do not assign&quot;,
&quot;RPO&quot;, &quot;RCVR - Assign for repossession&quot;,
&quot;XXX&quot;, &quot;&quot;,
&quot;&quot;, &quot;COND - Assign based on account status&quot;,
Risk_Strategy_Code_3__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Repossession</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reversal_Code__c</fullName>
        <description>Reversal code</description>
        <label>Reversal Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revised_Maturity_Date__c</fullName>
        <label>Revised Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rewrites__c</fullName>
        <formula>CASE(Risk_Strategy_Code_4__c,
&quot;AAA&quot;, &quot;APPR -  Approved if Conditions met&quot;,
&quot;DDD&quot;, &quot;DENY - Decline&quot;,
Risk_Strategy_Code_4__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rewrites</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Strategy_Code_1__c</fullName>
        <label>Risk Strategy Code 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Strategy_Code_2__c</fullName>
        <label>Risk Strategy Code 2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Strategy_Code_3__c</fullName>
        <label>Risk Strategy Code 3</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Strategy_Code__c</fullName>
        <label>Risk Strategy Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Strategy_Description_1__c</fullName>
        <label>Risk Strategy Description 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Strategy_Description_2__c</fullName>
        <label>Risk Strategy Description 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Strategy_Description_3__c</fullName>
        <label>Risk Strategy Description 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Code__c</fullName>
        <description>Sale Code</description>
        <label>Sale Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Deposit_Amount__c</fullName>
        <description>The amount of security deposit being held by the lessor as security on the lease</description>
        <label>Security Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Signature_Required__c</fullName>
        <formula>IF(
 OR(
  AND(
   RecordType.DeveloperName = &apos;Retail&apos;,
   NOT(ISBLANK(Dealership__r.BillingState)),
   NOT(ISBLANK(Primary_Garage_State__c)),
   CONTAINS($Label.Signatory_States_Retail, Dealership__r.BillingState),
   CONTAINS($Label.Signatory_States_Retail, Primary_Garage_State__c)
  ),
  AND(
   RecordType.DeveloperName = &apos;Lease&apos;,
   NOT(ISBLANK(Dealership__r.BillingState)),
   NOT(ISBLANK(Primary_Garage_State__c)),
   CONTAINS($Label.Signatory_States_Lease, Dealership__r.BillingState),
   CONTAINS($Label.Signatory_States_Lease, Primary_Garage_State__c)
  )
 ), 
 &quot;Yes - Both&quot;,
 IF(
  OR(
  AND(
   RecordType.DeveloperName = &apos;Retail&apos;,
   NOT(ISBLANK(Dealership__r.BillingState)),   
   CONTAINS($Label.Signatory_States_Retail, Dealership__r.BillingState)
  ),
  AND(
   RecordType.DeveloperName = &apos;Lease&apos;,
   NOT(ISBLANK(Dealership__r.BillingState)),
   CONTAINS($Label.Signatory_States_Lease, Dealership__r.BillingState)
  )
 ), 
  &quot;Yes - Dealer&quot;,
  IF(
   OR(
    AND(
     RecordType.DeveloperName = &apos;Retail&apos;,
     NOT(ISBLANK(Primary_Garage_State__c)),
     CONTAINS($Label.Signatory_States_Retail, Primary_Garage_State__c)
    ),
    AND(
     RecordType.DeveloperName = &apos;Lease&apos;,
     NOT(ISBLANK(Primary_Garage_State__c)),
     CONTAINS($Label.Signatory_States_Lease, Primary_Garage_State__c)
    )
   ), 
   &quot;Yes - Address&quot;,
   &quot;No&quot;
  )
 )
)</formula>
        <label>Signature Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Handling__c</fullName>
        <formula>CASE(Flag_Special_Handling__c,
&quot;M&quot;, &quot;M - CS Military&quot;,
&quot;N&quot;, &quot;N - CX Military&quot;,
&quot;O&quot;, &quot;O - CS &amp; CX Military&quot;,
&quot;S&quot;, &quot;S - CS SCRA Qualified&quot;,
&quot;T&quot;, &quot;T - CX SCRA Qualified&quot;,
&quot;U&quot;, &quot;U - CS &amp; CX SCRA Qualified&quot;,
&quot;0&quot;, &quot;0 - CS No longer MILI SCRA&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Handling</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Local__c</fullName>
        <description>Local tax amount</description>
        <label>Tax Local</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Payment__c</fullName>
        <description>Lease payment tax</description>
        <label>Tax Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Sales_Payable__c</fullName>
        <description>Lease payable use tax</description>
        <label>Tax Sales Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term_Months_Expired__c</fullName>
        <description>Expired terms</description>
        <label>Term Months Expired</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_Months_Original__c</fullName>
        <description>Original term</description>
        <label>Term Months Original</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>